tests fixed TODO: should action button be visible

--- a/easyblog/static/bootstrap/less/saapas.less
+++ b/easyblog/static/bootstrap/less/saapas.less
@@ -79,6 +79,11 @@ a {
     }
 }
 
+#wysiwyg {
+    width: 100%;
+    height: 400px;
+}
+
 /* Blog list-items */
 div.list-items {
     ul.content {
@@ -110,6 +115,9 @@ div.list-items {
     }
 }
 
+.buttons {
+    margin-top: 5px;
+}
 
 ul.page_navigation {
 }
